[package]
name = "hmc5883-async"
version = "0.1.3"
authors = ["Todd Stellanova <tstellanova@users.noreply.github.com>","Aïssata Maiga <aimaiga2@gmail.com>", "Henrik Alsér <henrik.alser@me.com>"]
edition = "2018"
description = "HMC5883 magnetometer async driver for embedded hal"
license = "BSD-3-Clause"
repository = "https://github.com/Dajamante/hmc5983-async"
categories = [
    "embedded",
    "hardware-support",
    "no-std",
    "async"
]
keywords = [
    "embedded-hal-driver",
    "async",
    "HMC5883",
    "magnetometer"
]
readme = "README.md"
exclude = [
    ".cargo_vcs_info.json"
]

[dependencies]
defmt = "0.3.2"
embedded-hal-async = "1.0.0"
panic-rtt-core = {version="0.2.1", optional=true}

[features]
default = []
rttdebug = ["panic-rtt-core"]

